  - added `restart/1` function
  - added `at/2` similar to Enum.at
 - new module Chunky.Timeout
  - macro: with_timeout/2   
 - Math
  - digit_sum/1
  - contains_digit?/2
  - remove_digits!/2
  - is_rhonda_to_base?/2
  - get_rhonda_to/2
  - is_rhonda_to_base_*?/1 
  - is_multiple_rhonda?/1
  
### Sequences

 - Added new sequence module OEIS.Powers
 - Added new sequence module OEIS.Repr
 - New Sequences
  - A000051 - a(n) = 2^n + 1
  - A000351 - a(n) = 5^n
  - A000400 - a(n) = 6^n
  - A000420 - a(n) = 7^n
  - A001018 - a(n) = 8^n
  - A001019 - a(n) = 9^n
  - A011557 - a(n) = 10^n
  - A001020 - a(n) = 11^n
  - A001021 - a(n) = 12^n
  - A001022 - a(n) = 13^n
  - A001023 - a(n) = 14^n
  - A001024 - Powers of 15.
  - A001025 - Powers of 16: a(n) = 16^n.
  - A001026 - Powers of 17.
  - A001027 - Powers of 18.
  - A001029 - Powers of 19.
  - A009964 - Powers of 20.
  - A009965 - Powers of 21.
  - A009966 - Powers of 22.
  - A009967 - Powers of 23.
  - A009968 - Powers of 24: a(n) = 24^n.
  - A009969 - Powers of 25.
  - A009970 - Powers of 26.
  - A009971 - Powers of 27.
  - A009972 - Powers of 28.
  - A009973 - Powers of 29.
  - A009974 - Powers of 30.
  - A009975 - Powers of 31.
  - A009976 - Powers of 32.
  - A009977 - Powers of 33.
  - A009978 - Powers of 34.
  - A009979 - Powers of 35.
  - A009980 - Powers of 36.
  - A009981 - Powers of 37.
  - A009982 - Powers of 38.
  - A009983 - Powers of 39.
  - A009984 - Powers of 40.
  - A009985 - Powers of 41.
  - A009986 - Powers of 42.
  - A009987 - Powers of 43.
  - A009988 - Powers of 44.
  - A009989 - Powers of 45.
  - A009990 - Powers of 46.
  - A009991 - Powers of 47.
  - A009992 - Powers of 48: a(n) = 48^n.  
  - A008585 - a(n) = 3*n.
  - A008586 - Multiples of 4.
  - A008587 - Multiples of 5.
  - A008588 - Nonnegative multiples of 6.
  - A008589 - Multiples of 7.
  - A008590 - Multiples of 8.
  - A008591 - Multiples of 9.
  - A008592 - Multiples of 10: a(n) = 10 * n.
  - A008593 - Multiples of 11.