@@ -1,0 +1,95 @@
+## Generators
+
+```elixir 
+OEIS.Util.generate_function_sequences(~w(A159981 A159984 A159986 A159987 A159988 A159989 A289682), in_module: Chunky.Sequence.OEIS.Combinatorics)
+OEIS.Util.generate_list_sequences(, in_module: Chunky.Sequence.OEIS.Factors)
+```
+
+## Combinatorics
+
+
+
+## Core
+
+A002808		The composite numbers: numbers n of the form x*y for x > 1 and y > 1. 
+
+A001358		Semiprimes (or biprimes): products of two primes. 
+
+
+## Powers
+
+
+## Multiples
+
+
+## Divisors
+
+
+A001414		Integer log of n: sum of primes dividing n (with repetition). Also called sopfr(n).
+
+A014612		Numbers that are the product of exactly three (not necessarily distinct) primes.
+A014613		Numbers that are products of 4 primes (these numbers are sometimes called "4-almost primes", a generalization of semiprimes).
+A014614		Numbers that are products of 5 primes (or 5-almost primes, a generalization of semiprimes)
+A046306		Numbers that are divisible by exactly 6 primes with multiplicity.
+A046308		Numbers that are divisible by exactly 7 primes counting multiplicity.
+A046310		Numbers that are divisible by exactly 8 primes counting multiplicity.
+A046312		Numbers that are divisible by exactly 9 primes with multiplicity.
+A046314		Numbers that are divisible by exactly 10 primes with multiplicity.
+A069272		11-almost primes (generalization of semiprimes).
+A069273		12-almost primes (generalization of semiprimes).
+A069274		13-almost primes (generalization of semiprimes).
+A069275		14-almost primes (generalization of semiprimes).
+A069276		15-almost primes (generalization of semiprimes).
+A069277		16-almost primes (generalization of semiprimes).
+A069278		17-almost primes (generalization of semiprimes).
+A069279		Products of exactly 18 primes (generalization of semiprimes).
+A069280		19-almost primes (generalization of semiprimes).
+A069281		20-almost primes (generalization of semiprimes).
+
+
+## Repr
+
+
+A255735		Integers that are Rhonda numbers to base 18
+
+
+A000120		1's-counting sequence: number of 1's in binary expansion of n (or the binary weight of n). 
+A023416		Number of 0's in binary expansion of n.
+
+A000788		Total number of 1's in binary expansions of 0, ..., n. 
+
+A071858		(Number of 1's in binary expansion of n) mod 3.
+A179868		(Number of 1's in binary expansion of n) mod 4.
+
+
+A010872		a(n) = n mod 3.
+
+
+A032924		Numbers whose ternary expansion contains no 0.
+A005823		Numbers whose ternary expansion contains no 1's. 
+A005836		Numbers n whose base 3 representation contains no 2. 
+
+
+A023705		Numbers with no 0's in base 4 expansion.
+A248910		Numbers with no zeros in base-6 representation.
+A255805		Numbers with no zeros in base-8 representation.
+A255808		Numbers with no zeros in base-9 representation.
+
+
+A001489		a(n) = -n.
+A007954		Product of decimal digits of n.
+A052040		Numbers n such that n^2 lacks the digit zero in its decimal expansion.
+A067251		Numbers with no trailing zeros in decimal representation.
+A055640		Number of nonzero digits in decimal expansion of n.
+A055641		Number of zero digits in n.
+A055642		Number of digits in decimal expansion of n.
+
+
+A122840		a(n) is the number of 0s at the end of n when n is written in base 10.
+A160093		Number of digits in n, excluding any trailing zeros.
+A193238		Number of prime digits in decimal representation of n.
+A196563		Number of even digits in decimal representation of n.
+
+
+## Constant
+
